# buddy-mlir

examples/GemminiDialect/: tile-matmul-dataflow-override.mlir  tile-matmul-invalid-tiles.mlir  tile-matmul-os-custom-tiles.mlir
frontend/FrontendGen/: CMakeLists.txt
midend/include/Dialect/Gemmini/: Transform.h
midend/lib/Conversion/LowerGemmini/: LowerGemminiPass.cpp
midend/lib/Dialect/Gemmini/Transforms/: LegalizeForLLVMExport.cpp
tools/buddy-llc/: CMakeLists.txt
tools/buddy-translate/: CMakeLists.txt  buddy-translate.cpp
